--- a/index.html
+++ b/index.html
@@ -511,6 +511,58 @@
           </dv>
         </div>
       </section>
+
+      <section class="section-cta">
+        <div class="container cta">
+          <div class="cta-text-box">
+            <h2 class="heading-secondary">Get your first meal free!</h2>
+            <p class="cta-text">
+              Healthy, tasty and hassle-free meals are waiting for you. Start
+              eating well today. You can cancel or pause anytime. And the first
+              meal is on us!
+            </p>
+            <form class="cta-form" action="#">
+              <div>
+                <label for="full-name">Full Name</label>
+                <input
+                  class="name"
+                  type="text"
+                  id="full-name"
+                  placeholder="Pratap"
+                  required
+                />
+              </div>
+              <div>
+                <label for="email">Email address</label>
+                <input
+                  class="email"
+                  id="email"
+                  placeholder="pratap@gmail.com"
+                  required
+                />
+              </div>
+              <div>
+                <label for="select-where">Where did you here from us?</label>
+                <select id="select-where" required>
+                  <option value="">Please choose one option:</option>
+                  <option value="friends">Friends and family</option>
+                  <option value="youtube">Youtube videos</option>
+                  <option value="ad">Facebook ad</option>
+                  <option value="others">Others</option>
+                </select>
+              </div>
+              <!-- <div> -->
+              <button class="btn btn--form">Sign up now</button>
+              <!-- </div> -->
+            </form>
+          </div>
+          <div
+            class="cta-img-box"
+            role="img"
+            aria-label="Women enjoying food"
+          ></div>
+        </div>
+      </section>
     </main>
     <script
       type="module"
